--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 sourceCompatibility = 1.6
-project.version = 1.0
+project.version = 1.7
 defaultTasks 'clean', 'build'
 
 configurations{
@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
     pluginLibs group: 'org.freemarker', name: 'freemarker', version: '2.3.20'
-    compile(group:'org.rundeck', name: 'rundeck-core', version: '2.0.3')
+    compile(group:'org.rundeck', name: 'rundeck-core', version: '2.1.1')
 }
 
 // task to copy plugin libs to output/lib dir
@@ -32,7 +32,7 @@ jar {
     //include contents of output dir
     from "$buildDir/output"
     manifest {
-        attributes 'Rundeck-Plugin-Version': '1.1', 'Rundeck-Plugin-Archive': 'true'
+        attributes 'Rundeck-Plugin-Version': '1.1', 'Rundeck-Plugin-Archive': 'true','Rundeck-Plugin-File-Version': "${project.version}"
         //create space-separated list of pluginLibs
         def libList = configurations.pluginLibs.collect{'lib/'+it.name}.join(' ')
         attributes 'Rundeck-Plugin-Classnames': 'com.bitplaces.rundeck.plugins.slack.SlackNotificationPlugin', 'Rundeck-Plugin-Libs': "${libList}"
